--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -189,6 +189,10 @@ html {
   box-sizing: border-box;
   overflow-y: scroll;
 }
+html, body {
+  margin: 0;
+  padding: 0;
+}
 * {
   box-sizing: inherit;
 }
@@ -432,6 +436,15 @@ fieldset {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
+}
+
+footer {
+  position: absolute;
+  top: 90%;
+
+  border: solid 1px black;
+  width: 100%;
+  height: auto;
 }
 blockquote {
   margin-left: 1.45rem;
