--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,6 +1,9 @@
 $feature-flags: (
   ui-shell: true,
+  grid-columns-16: true,
 );
+
+@import 'carbon-components/scss/components/ui-shell/ui-shell';
 
 @import 'carbon-components/scss/globals/scss/styles';
 @import 'carbon-components/scss/globals/scss/vendor/@carbon/type/scss/font-family';
@@ -8,4 +11,7 @@ $feature-flags: (
 @import 'carbon-components/scss/globals/scss/typography';
 @import 'carbon-components/scss/globals/scss/vars';
 
+@import '../layout/layout_theme';
+@import '../layout/Default/default_layout';
+@import '../layout/Examples/example_layout';
 @import '../components/SiteHeader/site_header';
