--- a/src/components/SiteHeader/_site_header.scss
+++ b/src/components/SiteHeader/_site_header.scss
@@ -1,9 +1,22 @@
 .SiteHeader__heading {
-  @include carbon--type-style('productive-heading-05');
+  padding-top: $spacing-05;
+  height: $layout-06;
+  padding-bottom: $spacing-07;
+  background-color: #e0e0e0;
+  border-bottom: 1px solid #e0e0e0;
 
-  background-color: '#e0e0e0';
-}
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-.SiteHeader__name {
-  @include carbon--type-style('productive-heading-04');
+  .SiteHeader__name {
+    margin: $spacing-05;
+    color: #161616;
+    @include carbon--type-style('display-03');
+
+    &:hover {
+      text-decoration: none;
+      color: inherit;
+    }
+  }
 }
