--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -20,3 +20,4 @@ $carbon--theme: $carbon--theme--g10;
 @import '../layout/Default/default_layout';
 @import '../layout/Examples/example_layout';
 @import '../components/SiteHeader/site_header';
+@import '../components/footer/footer';
