--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -21,3 +21,4 @@ $carbon--theme: $carbon--theme--g10;
 @import '../layout/Examples/example_layout';
 @import '../components/SiteHeader/site_header';
 @import '../components/footer/footer';
+@import '../components/ExampleList/example_list';
