--- a/src/layout/Examples/_example_layout.scss
+++ b/src/layout/Examples/_example_layout.scss
@@ -1,4 +1,8 @@
-@import '@carbon/themes/scss/themes';
-
-$carbon--theme: $carbon--theme--g90;
-@include carbon--theme();
+.example_layout--container {
+  .example_content__container {
+    margin-top: $layout-03;
+  }
+  .default_content__topspacing {
+    height: $layout-05;
+  }
+}
