--- a/src/layout/Default/_default_layout.scss
+++ b/src/layout/Default/_default_layout.scss
@@ -1,4 +1,5 @@
 .default_layout--container {
+  flex: 1 0 auto;
   //   margin-top: $spacing-07;
   .default_content__container {
     margin-top: $layout-03;
